[gd_scene load_steps=16 format=3 uid="uid://cspcb1h7kr4tf"]

[ext_resource type="Script" path="res://Character/EnemyCharacter_AI/EM3/GD_EM3_AI.gd" id="1_q8125"]
[ext_resource type="PackedScene" uid="uid://dsskmi02nper0" path="res://Character/PlayerCharacter/Ui/S_GaugeBar.tscn" id="2_23chk"]
[ext_resource type="Texture2D" uid="uid://ssi52s0mwmkx" path="res://Character/EnemyCharacter_Test/EM3/EM3.png" id="3_hkgec"]
[ext_resource type="PackedScene" uid="uid://cagawxjdpn61t" path="res://Skills/Movement/Move/S_Move.tscn" id="4_o05ts"]
[ext_resource type="PackedScene" uid="uid://dr8bt77t5fa85" path="res://Skills/Basic_Atk/Punch/S_Punch.tscn" id="5_edena"]
[ext_resource type="PackedScene" uid="uid://fwcqm25eg6bc" path="res://Skills/EM3/BuffDefSpeed/S_BuffDefSpeed.tscn" id="6_3jyqw"]

[sub_resource type="Animation" id="Animation_jtqh0"]
resource_name = "Cast"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_n1vr6"]
resource_name = "Death"
length = 1.00001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.958333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_y53io"]
resource_name = "Hurt"
length = 0.250004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.208333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"return_to_idle"
}]
}

[sub_resource type="Animation" id="Animation_h4dee"]
resource_name = "Idle"
length = 0.666671
loop_mode = 2
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_kx76g"]
resource_name = "Punch"
length = 0.625005
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_h5pqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_m6r1a"]
resource_name = "Shuriken"
length = 0.500005
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger"
}]
}

[sub_resource type="Animation" id="Animation_q4stp"]
resource_name = "Walk"
length = 0.750005
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmd81"]
_data = {
"Cast": SubResource("Animation_jtqh0"),
"Death": SubResource("Animation_n1vr6"),
"Hurt": SubResource("Animation_y53io"),
"Idle": SubResource("Animation_h4dee"),
"Punch": SubResource("Animation_kx76g"),
"RESET": SubResource("Animation_h5pqb"),
"Shuriken": SubResource("Animation_m6r1a"),
"Walk": SubResource("Animation_q4stp")
}

[node name="S_EM3_AI" type="Node2D" groups=["character"]]
z_index = 3
y_sort_enabled = true
scale = Vector2(3, 3)
script = ExtResource("1_q8125")
start_atk = 3
start_def = 0
start_speed = 15
start_max_health = 12

[node name="S_GaugeBar" parent="." instance=ExtResource("2_23chk")]
offset_left = -20.0
offset_top = -61.0
offset_right = -20.0
offset_bottom = -61.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
texture = ExtResource("3_hkgec")
offset = Vector2(0, -30)
hframes = 6
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xmd81")
}

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillsList" type="Node2D" parent="."]

[node name="S_Move" parent="SkillsList" instance=ExtResource("4_o05ts")]

[node name="S_Punch" parent="SkillsList" instance=ExtResource("5_edena")]

[node name="S_BuffDefSpeed" parent="SkillsList" instance=ExtResource("6_3jyqw")]

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
